<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="395dp"
        android:layout_height="340dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="195dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="196dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:divider="@drawable/emptytalldiv"
        android:padding="40dp">

        <Button
            android:id="@+id/dlscanbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:text="@string/cardscan" />

        <Button
            android:id="@+id/fpscanbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fingerprintscan" />

        <Button
            android:id="@+id/qrypltnum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/platenoquery" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>